--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="media/log.png" type="image/png">
     <title>SOLUNET</title>
 </head>
 <body>
-  <h1>SOLUNET</h1>
+    <div class="logo">
+        <img src="media/log.png" class="logo">
+        <h1>SOLUNET</h1>
+    </div>
+
   <div class="contenedor">
     <div class="plan" id="normal">
         <h2 class="h2">Plan Normal</h2>
