--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="media/log.png" type="image/png">
+    <link rel="icon" href="media/l1.png" type="image/png">
     <title>SOLUNET</title>
 </head>
 <body>
     <div class="logo">
-        <img src="media/log.png" class="logo">
+        <img src="media/l1.png" class="logo">
         <h1>SOLUNET</h1>
     </div>
 
