--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="media/l1.png" type="image/png">
-    <title>SOLUNET</title>
+    <title>ZNET</title>
 </head>
 <body>
     <div class="logo">
         <img src="media/l1.png" class="logo">
-        <h1>SOLUNET</h1>
+        <h1>ZNET</h1>
     </div>
 
   <div class="contenedor">
